; ModuleID = '/home/carl/AnghaBench/ccv/lib/extr_ccv_sift.c__ccv_floor.c'
source_filename = "/home/carl/AnghaBench/ccv/lib/extr_ccv_sift.c__ccv_floor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (float)* @_ccv_floor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_ccv_floor(float %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca float, align 4
  %4 = alloca i32, align 4
  store float %0, float* %3, align 4
  %5 = load float, float* %3, align 4
  %6 = fptosi float %5 to i32
  store i32 %6, i32* %4, align 4
  %7 = load float, float* %3, align 4
  %8 = fcmp oge float %7, 0.000000e+00
  br i1 %8, label %14, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* %4, align 4
  %11 = sitofp i32 %10 to float
  %12 = load float, float* %3, align 4
  %13 = fcmp oeq float %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %9, %1
  %15 = load i32, i32* %4, align 4
  store i32 %15, i32* %2, align 4
  br label %19

16:                                               ; preds = %9
  %17 = load i32, i32* %4, align 4
  %18 = sub nsw i32 %17, 1
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %16, %14
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
